# self_attention_implementation_HPC

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  naive.cpp  optimized.cpp
pytorch/: generating_results.py  main.py  main_output.txt  old.py
